--- a/css/form.css
+++ b/css/form.css
@@ -55,6 +55,7 @@ input:hover,
 input:focus {
     background-color: var(--blue);
     border: 3px solid var(--pink);
+    outline: none;
 }
 
 .container {
@@ -96,7 +97,18 @@ legend {
 }
 
 #mentorname {
+    background-color: #FAFAFC;
+    border: 1px solid #E6E6F0;
+    border-radius: 8px;
+    color: var(--black);
+    font-size: 1.8rem;
+    height: 5.5rem;
+    padding-left: 1rem;
     width: 50%;
+}
+
+#empty-option {
+    display: none;
 }
 
 #textarea {
