--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,7 @@ header p {
     background-color: var(--pink);
     border-radius: 8px;
 }
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #b94a3e
+}
